Refine account settings management
