# api/openapi/expensor.openapi.yaml
@@ -1395,6 +1395,36 @@ paths:
       tags:
       - Auth
   /admin/users/{id}:
+    delete:
+      parameters:
+      - description: User ID
+        example: 00000000-0000-0000-0000-00000000c0de
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpapi.ErrorResponse'
+      summary: Delete an instance user
+      tags:
+      - Auth
     patch:
       consumes:
       - application/json
